Visual enhancements: - Dark mode for code chunks - Fixed navbar - List result: badges for names, pillar::obj_sum for additional information

--- a/www/css/dark.css
+++ b/www/css/dark.css
@@ -14,3 +14,12 @@ doesn't fit well with emphasized */
 .form-control, select, .selectize-input.full {
   background-color: initial;
 }
+
+.dark-mode code {
+  background-color: rgb(69, 77, 85);
+  color: white;
+}
+
+.dark-mode .hljs-string {
+  color: #68ff00;
+}
